# rusty-craft

./: .gitignore  Cargo.toml  README.md
assets/shaders/: triangle.frag  triangle.vert
scripts/: build.rs  copy_assets.rs
src/: ffi_utils.rs  main.rs  resources.rs
src/render/: mod.rs  program.rs  shader.rs  texture.rs
